--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,4 @@ install:
 - pip install --upgrade --force-reinstall --ignore-installed -e .
 script:
 - python setup.py test
-script:
-- make run&
-- sleep 5
-- make test_all
+- make run& sleep 5; make test_all
