--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,4 @@
 language: python
-python:
-- 3.6
 install:
 - pip install --upgrade --force-reinstall setuptools
 - pip uninstall --yes yabc || true
@@ -11,3 +9,10 @@ script:
 branches:
   only:
     - master
+matrix:
+  include:
+    - python: 3.5
+    - python: 3.6
+    - python: 3.7
+      dist: xenial
+      sudo: true
