--- a/.travis.yml
+++ b/.travis.yml
@@ -11,8 +11,10 @@ branches:
     - master
 matrix:
   include:
+    - python: 3.4
     - python: 3.5
     - python: 3.6
     - python: 3.7
+    - python: 3.8-dev
       dist: xenial
       sudo: true
