--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ install:
 script:
 - PYTHONPATH=tests python setup.py test
 - make nuke_db_and_run& sleep 5; make test_all
+- python -m yabc testdata/gemini/synthetic_gemini_csv.csv ./testdata/synthetic_coinbase_csv.csv
 branches:
   only:
     - master
