--- a/.travis.yml
+++ b/.travis.yml
@@ -4,9 +4,9 @@ install:
 - pip uninstall --yes yabc || true
 - pip install --upgrade --force-reinstall --ignore-installed -e .
 script:
-- PYTHONPATH=tests python setup.py test
+- python setup.py test
 - make nuke_db_and_run& sleep 5; make test_all
-- python -m yabc testdata/gemini/synthetic_gemini_csv.csv ./testdata/synthetic_coinbase_csv.csv
+- python -m yabc testdata/gemini/sample_gemini.csv ./testdata/sample_coinbase.csv
 branches:
   only:
     - master
