--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ install:
 - pip uninstall --yes yabc || true
 - pip install --upgrade --force-reinstall --ignore-installed -e .
 script:
-- python setup.py test
+- PYTHONPATH=src python -m unittest discover -s tests
 - make nuke_db_and_run& sleep 5; make test_all
 - python -m yabc testdata/gemini/sample_gemini.csv ./testdata/coinbase/sample_coinbase.csv
 branches:
