Run tests inside intellij with unittest (#82)
- renaming the test files so `test_*.py` allows `python -m unittest discover` to work
- this allows fancy rendering inside the intellij GUI
- should also work in CI

# test plan
make sure CI passes, and make sure the number of tests (34) is the same before and after this PR.

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ install:
 - pip uninstall --yes yabc || true
 - pip install --upgrade --force-reinstall --ignore-installed -e .
 script:
-- python setup.py test
+- PYTHONPATH=tests python setup.py test
 - make nuke_db_and_run& sleep 5; make test_all
 - python -m yabc testdata/gemini/sample_gemini.csv ./testdata/coinbase/sample_coinbase.csv
 branches:
