--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,9 @@
 language: python
+python:
+  - "3.5"
+  - "3.6"
+  - "3.7"
+  - "3.8"
 install:
 - pip install --upgrade --force-reinstall setuptools
 - pip uninstall --yes yabc || true
@@ -10,11 +15,3 @@ script:
 branches:
   only:
     - master
-matrix:
-  include:
-    - python: 3.5
-    - python: 3.6
-    - python: 3.7
-    - python: 3.8-dev
-      dist: xenial
-      sudo: true
