--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ install:
 script:
 - PYTHONPATH=tests python setup.py test
 - make nuke_db_and_run& sleep 5; make test_all
-- python -m yabc testdata/gemini/sample_gemini.csv ./testdata/coinbase/sample_coinbase.csv
+- python -m yabc testdata/gemini/sample_gemini.xlsx ./testdata/coinbase/sample_coinbase.csv
 branches:
   only:
     - master
